src/objects/ffps_brunt__CollectionSummary__c.object
<CustomObject>
    <fields>
        <fullName>ffps_brunt__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collections Summaries</relationshipLabel>
        <relationshipName>CollectionsSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__CashEntryReversal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry Reversal</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Collections Summaries (Cash Entry Reversal)</relationshipLabel>
        <relationshipName>CollectionsSummaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__CashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Collections Summaries (Cash Entry)</relationshipLabel>
        <relationshipName>CollectionsSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__CollectionStatus__c</fullName>
        <label>Collection Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Cash Entry Stage</fullName>
                </value>
                <value>
                    <fullName>Matching Stage</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Canceling</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Canceling Stage</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_brunt__Collection__c</fullName>
        <label>Collection</label>
        <referenceTo>ffps_brunt__Collection__c</referenceTo>
        <relationshipLabel>Collections Summaries</relationshipLabel>
        <relationshipName>CollectionsSummaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__CustomerConfidentialDocumentation__c</fullName>
        <label>Customer Confidential Documentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__MatchingReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matching Reference</label>
        <referenceTo>c2g__codaMatchingReference__c</referenceTo>
        <relationshipLabel>Collections Summaries (Matching Reference)</relationshipLabel>
        <relationshipName>CollectionsSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__NumberofCheckboxSelected__c</fullName>
        <label>Number of Checkbox Selected</label>
        <summaryFilterItems>
            <field>ffps_brunt__CollectionLine__c.ffps_brunt__Selected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ffps_brunt__CollectionLine__c.ffps_brunt__CollectionSummary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Selected__c</fullName>
        <formula>ffps_brunt__NumberofCheckboxSelected__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__TotalAmounttoPay__c</fullName>
        <label>Total Amount to Pay</label>
        <summarizedField>ffps_brunt__CollectionLine__c.ffps_brunt__AmounttoPay__c</summarizedField>
        <summaryForeignKey>ffps_brunt__CollectionLine__c.ffps_brunt__CollectionSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__TotalOutstandingBalance__c</fullName>
        <label>Total Outstanding Balance</label>
        <summarizedField>ffps_brunt__CollectionLine__c.ffps_brunt__OutstandingBalance__c</summarizedField>
        <summaryForeignKey>ffps_brunt__CollectionLine__c.ffps_brunt__CollectionSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__UndoMatchingReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Undo Matching Reference</label>
        <referenceTo>c2g__codaMatchingReference__c</referenceTo>
        <relationshipLabel>Collections Summaries (Undo Matching Reference)</relationshipLabel>
        <relationshipName>CollectionsSummaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Collection Summary</label>
    <nameField>
        <displayFormat>CS{000000}</displayFormat>
        <label>Collection Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>